@@ -1,3 +1,7 @@
+2007-01-18  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* tests/compile.test (compile-16.24): Added test for [Bug 1638414]
+
 2007-01-17  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclIO.c: Added macros to make usage of ChannelBuffers
